# RenTA

./: .gitattributes  .gitignore  ACPS_V21_PLATFORM_UPGRADE_MODULES.md  ACPs_v2_1_upgrade_change_points.md  FINAL_ACPS_V21_UPGRADE_VALIDATION.md  PROJECT_LAYOUT.md  REPOSITORY_CLEANUP_20260710.md  STAGE0_BASELINE.md  STAGE1_AIC_ACS_UPGRADE.md  STAGE2_REGISTRY_EAB_UPGRADE.md  STAGE3_CA_EAB_UPGRADE.md  STAGE4_FRONTEND_GATEWAY_UPGRADE.md  STAGE5_DISCOVERY_ROUTER_UPGRADE.md  STAGE6_MQ_INBOX_MTLS_UPGRADE.md  agent_registration_health_fix.md  setup_remote_git_repo.sh  start_all_servers.sh  travel_multi_agent_workflow.py  平台数据查询说明.md
ACPs_update_code/ACPs-CA-Challenge/: pyproject.toml
ACPs_update_code/ACPs-CA-Challenge/acps_ca_challenge/: api.py  config.py
ACPs_update_code/ACPs-CA-Client/: .gitignore  README.md  USAGE.md  ca-client.conf.example  pyproject.toml
ACPs_update_code/ACPs-CA-Client/acps_ca_client/: acme.py  cli.py  config.py  keys.py  utils.py
ACPs_update_code/ACPs-CA-Client/tests/: README.md  conftest.py
ACPs_update_code/ACPs-CA-Client/tests/e2e/: conftest.py  e2e.conf  test_e2e.py
ACPs_update_code/ACPs-CA-Client/tests/integration/: conftest.py  test_cli.py
ACPs_update_code/ACPs-CA-Client/tests/unit/: conftest.py  test_acme.py  test_config.py  test_keys.py  test_utils.py
ACPs_update_code/ACPs-CA-Server/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml  run.sh
ACPs_update_code/ACPs-CA-Server/alembic/: env.py
ACPs_update_code/ACPs-CA-Server/alembic/versions/: 024a0fe4cc9e_create_acme_tables.py  41b8ee38619d_add_crl_and_ocsp_tables.py  612b6c93f9a9_add_aic_to_acme_certificates.py  63766cfa6a42_add_certificates_table.py  9b3d2b7c1a6f_add_certificate_version.py
ACPs_update_code/ACPs-CA-Server/app/: __init__.py
ACPs_update_code/ACPs-CA-Server/app/acme/: __init__.py  agent_registry.py  api.py  error_handler.py  exception.py  http01_validator.py  jws_verifier.py  mock_data.py  models.py  schemas.py  services.py  utils.py
ACPs_update_code/ACPs-CA-Server/app/certificates/: __init__.py  api.py  api_ext.py  services.py
ACPs_update_code/ACPs-CA-Server/app/common/: __init__.py  certificate_model.py  certificate_schema.py  certificate_service.py  certificate_version.py  crl_model.py  crl_schema.py  crl_service.py  ocsp_model.py  ocsp_schema.py  ocsp_service.py  time_utils.py
ACPs_update_code/ACPs-CA-Server/app/core/: __init__.py  atr_ip_filter.py  ca_manager.py  config.py  db_session.py
ACPs_update_code/ACPs-CA-Server/app/crl/: __init__.py  api.py
ACPs_update_code/ACPs-CA-Server/app/ocsp/: __init__.py  api.py
ACPs_update_code/ACPs-CA-Server/app/utils/: __init__.py
ACPs_update_code/ACPs-CA-Server/tests/: conftest.py  test_acme.py  test_certificates.py  test_crl.py  test_crl_ocsp_integration.py  test_data_setup.py  test_ext.py  test_main.py  test_mock_integration.py  test_ocsp.py
ACPs_update_code/ACPs-SDK/: LICENSE  README.md  TUTORIAL-AIP.md  pyproject.toml
ACPs_update_code/ACPs-SDK/acps_sdk/: __init__.py
ACPs_update_code/ACPs-SDK/acps_sdk/acs/: README.md  __init__.py  models.py
ACPs_update_code/ACPs-SDK/acps_sdk/adp/: README.md  __init__.py  constants.py  errors.py  models.py  validators.py
ACPs_update_code/ACPs-SDK/acps_sdk/aic/: README.md  __init__.py
ACPs_update_code/ACPs-SDK/acps_sdk/aic_v21/: __init__.py
ACPs_update_code/ACPs-SDK/acps_sdk/aip/: README.md  aip_group_leader.py  aip_group_leader.py.bak_20260610_174400_before_traffic_monitor  aip_group_model.py  aip_group_partner.py  aip_group_partner.py.bak_20260610_174400_before_traffic_monitor  aip_rpc_client.py  aip_rpc_client.py.bak_20260610_174232_before_traffic_monitor  aip_rpc_server.py  aip_stream_model.py
ACPs_update_code/ACPs-SDK/acps_sdk/aip_v21/: __init__.py  aip_base_model.py  aip_group_auth.py  aip_group_leader.py  aip_group_model.py  aip_group_partner.py  aip_group_runtime.py  aip_rpc_model.py
ACPs_update_code/ACPs-SDK/acps_sdk/monitoring/: __init__.py  traffic_monitor.py
ACPs_update_code/ACPs-SDK/tests_v21/: test_group_invitation.py  test_group_leader.py  test_group_runtime.py
sds/: 验证服务器实现.md  (+1 more)
sds/mq-auth-server/: .env.example  LICENSE  README.md  RENTA_INTEGRATION.md  pyproject.toml  start.sh
sds/mq-auth-server/app/: __init__.py  dependencies.py  main.py
sds/mq-auth-server/app/acs/: healthcheck-client-acs.json  mq-auth-server-acs.json
sds/mq-auth-server/app/api/: auth.py  group_problem.py  groups.py
sds/mq-auth-server/app/core/: config.py  dev_tls.py  health_probe.py  logging_config.py  middleware.py  peer_cert.py  tracing.py  validation.py
sds/mq-auth-server/app/services/: authz.py  group_acl.py  rabbitmq_mgmt.py
sds/mq-auth-server/config/: default.toml  development.toml  production.toml  testing.toml
sds/mq-auth-server/deploy/: rabbitmq-stage6-advanced.config.example  rabbitmq-stage6.conf.example
sds/mq-auth-server/scripts/: provision-renta-certs.sh
sds/mq-auth-server/tests/: README.md  __init__.py  conftest.py
sds/mq-auth-server/tests/e2e/: conftest.py  test_auth_api_e2e.py  test_groups_api_e2e.py
sds/mq-auth-server/tests/integration/: conftest.py  test_group_acl_redis.py  test_rabbitmq_mgmt_client.py
sds/registry-server/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml  run.sh  run.sh.bak_20260618_113647  run.sh.bak_20260618_114203
sds/registry-server/.tools/: alembic  codegraph  pytest
sds/registry-server/alembic/: env.py
sds/registry-server/client/: agent9_registration_backup_202606110126.json  amap_data.json  budget_estimator.json  content_creator.json  data_compressor.json  demo_common.py  frontend_engineer.json  itinerary_planner.json  poi_collector.json  proxy_upload_results.json  qa_engineer.json  travel_report.json
sds/registry-server/scripts/: watch_agent_events.py  watch_registry_events.py
sds/registry-server/tests/: conftest.py  test_acps_v21_compat.py  test_aic.py  test_atr_api.py  test_changes.py  test_eab.py  test_supervisor.py  test_supervisor.py.bak_before_health_fix_20260609_231450  test_webhooks.py
(+563 files in other folders)
