[project]
name = "acps-ca-challenge"
version = "2.0.0"
description = "Agent Trusted Registration (ATR) Challenge Server"
authors = [{ name = "Team", email = "team@ioa.pub" }]
readme = "README.md"
license = "MulanPSL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.122.0,<1.0.0",
    "uvicorn>=0.38.0,<1.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "flake8>=7.0.0,<8.0.0",
]

[project.scripts]
challenge-server = "acps_ca_challenge.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Poetry 配置
[tool.poetry]
packages = [{ include = "acps_ca_challenge" }]
