[project]
name = "acps-sdk"
version = "2.0.0"
description = "ACPs SDK - Agent Collaboration Protocols SDK"
authors = [{ name = "Team", email = "team@ioa.pub" }]
readme = "README.md"
license = "MulanPSL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "aio-pika>=9.0.0",
    "fastapi>=0.100.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Poetry 配置
[tool.poetry]
packages = [{ include = "acps_sdk" }]
