[project]
name = "mq-auth-server"
version = "2.1.0"
description = "RabbitMQ HTTP auth backend and ACL management service for ACPs"
readme = "README.md"
license = "MulanPSL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.5",
    "fastapi>=0.115",
    "httpx>=0.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-sdk>=1.28",
    "prometheus-fastapi-instrumentator>=7.0",
    "pydantic-settings>=2.7",
    "redis>=5.2",
    "structlog>=24.4",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
mq-auth-server = "app.main:main"

[dependency-groups]
dev = [
    "bandit[toml]>=1.8",
    "commitizen>=4.4",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "types-cachetools>=5.5.0.20240820",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",   # assert 用于测试
    "RUF001", # 允许字符串中使用中文字符
    "RUF002", # 允许 docstring 中使用中文标点
    "RUF003", # 允许注释中使用中文标点
    "B008",   # FastAPI Depends() 模式
    "TC001",  # 应用内 import 运行时需要解析注解（FastAPI Depends 模式）
    "TC002",  # 第三方 import 运行时需要解析注解
    "TC003",  # 标准库 import 同理
    "S104",   # 绑定 0.0.0.0 是预期行为
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201", "PTH100", "PTH120"]
"tests/*" = ["S105", "S106"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
strict = false
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["unit: 单元测试", "integration: 集成测试", "e2e: 端到端测试", "performance: 性能测试"]
addopts = "--strict-markers -ra"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
update_changelog_on_bump = true
