[project]
name = "registry-server"
version = "2.0.0"
description = "Agent Registry Server"
authors = [{ name = "Team", email = "team@ioa.pub" }]
readme = "README.md"
license = "MulanPSL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "sqlalchemy>=2.0.40,<3.0.0",
    "sqlmodel>=0.0.24,<1.0.0",
    "alembic>=1.15.0,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "pydantic-settings>=2.9.0,<3.0.0",
    "requests>=2.32.0,<3.0.0",
    "uuid6>=2024.7.0",
    "tenacity>=9.1.0,<10.0.0",
    "typer>=0.15.0,<1.0.0",
    "python-jose[cryptography]>=3.4.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.0.1,<4.1.0",
    "python-multipart>=0.0.20,<1.0.0",
    "qdrant-client>=1.13.0,<2.0.0",
    "openai>=1.76.0,<2.0.0",
    "redis>=5.2.0,<8.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "greenlet>=3.2.0,<4.0.0",
    "jsonschema>=4.26.0,<5.0.0",
    "xattr>=1.1.0,<2.0.0",
    "gmssl>=3.2.2,<4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<10.0.0",
    "httpx>=0.28.0,<1.0.0",
    "coverage>=7.12.0,<8.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Poetry 专有配置
[tool.poetry]
packages = [{ include = "app" }]

# Pytest 专有配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage 专有配置
[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
